test/parser/bad/_custom/interface_with_constant.java
// Interface with constants are in Java, but not Joos1W.
public interface InterfaceWithConstant {
    public int a = 2;
}
